--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -114,7 +114,7 @@
                 this.apiResponse = null
 
                 const xhr = new XMLHttpRequest()
-                xhr.open("POST", '/', true)
+                xhr.open("POST", window.location.pathname, true)
                 xhr.setRequestHeader('Content-Type', 'application/json')
                 xhr.onloadend = function () {
                     this.xhrCompletion = true
